src/objects/Product__c.object
<CustomObject>
    <description>Catalogo prodotti (SKU)</description>
    <fields>
        <fullName>Categoria_merceologica__c</fullName>
        <label>Categoria Merceologica</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colore__c</fullName>
        <label>Colore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_ID__c</fullName>
        <externalId>true</externalId>
        <label>SKU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linea_di_vendita__c</fullName>
        <label>Linea di vendita</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Macro_Categoria_Colore__c</fullName>
        <label>Macro Categoria Colore</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Macro_Categoria__c</fullName>
        <label>Macro Categoria</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Made_in__c</fullName>
        <label>Made in</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Materiale__c</fullName>
        <label>Materiale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Micro_Categoria_Colore__c</fullName>
        <label>Micro Categoria Colore</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Micro_Categoria__c</fullName>
        <label>Micro Categoria</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modello_DW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modello DW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modello__c</fullName>
        <label>Modello</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMateriale__c</fullName>
        <label>% Materiale</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Peso_Netto__c</fullName>
        <label>Peso Netto</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferenziale__c</fullName>
        <label>Preferenziale</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presenza_Taglia_DW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presenza Taglia DW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SKU_no_size__c</fullName>
        <formula>Stagione__c + &apos;&apos; + Modello__c + &apos;&apos; + Colore__c</formula>
        <label>SKU no size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sesso__c</fullName>
        <label>Sesso</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stagione_SS_FW__c</fullName>
        <formula>IF (RIGHT(Stagione__c, 1)= &quot;1&quot;, &quot;SS&quot;, 
IF (RIGHT(Stagione__c, 1)= &quot;2&quot;, &quot;FW&quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stagione SS/FW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stagione__c</fullName>
        <label>Stagione</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taglia_DW__c</fullName>
        <label>Taglia DW</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Prodotto__c</fullName>
        <label>Tipo Prodotto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_filato__c</fullName>
        <label>Tipo filato</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Prodotto.</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stagione__c</columns>
        <columns>Modello__c</columns>
        <columns>Colore__c</columns>
        <columns>Sesso__c</columns>
        <columns>Linea_di_vendita__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tutto</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Nome Prodotto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prodotti</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>